# AVDL2

./: .clang-format  .gitignore  AVDL2_Qt.pro  CMakeLists.txt  LICENSE  README.md  dialog.cpp  dialog.h  dialog.ui  emulate.py  main.cpp  serialconnect.cpp  serialconnect.h  serialportfacade.cpp  serialportfacade.h  strobethread.cpp  strobethread.h
src/: datastream.cpp  datastream.hpp  dialog.cpp  dialog.h  dialog.ui  main.cpp  serial.cpp  serial.hpp  util.hpp
